// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`className is added to the root element 1`] = `"pf-c-notification-drawer__group extra-class"`;

exports[`drawer group with isExpanded applied  1`] = `
<section
  className="pf-c-notification-drawer__group pf-m-expanded"
>
  <h1>
    <button
      aria-expanded={true}
      className="pf-c-notification-drawer__group-toggle"
      onClick={[Function]}
    >
      <div>
        Critical Alerts
      </div>
      <div
        className="pf-c-notification-drawer__group-toggle-count"
      >
        <Badge
          isRead={false}
        >
          2
        </Badge>
      </div>
      <span
        className="pf-c-notification-drawer__group-toggle-icon"
      >
        <AngleRightIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </span>
    </button>
  </h1>
</section>
`;

exports[`drawer group with isRead applied  1`] = `
<section
  className="pf-c-notification-drawer__group"
>
  <h1>
    <button
      aria-expanded={false}
      className="pf-c-notification-drawer__group-toggle"
      onClick={[Function]}
    >
      <div>
        Critical Alerts
      </div>
      <div
        className="pf-c-notification-drawer__group-toggle-count"
      >
        <Badge
          isRead={true}
        >
          2
        </Badge>
      </div>
      <span
        className="pf-c-notification-drawer__group-toggle-icon"
      >
        <AngleRightIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </span>
    </button>
  </h1>
</section>
`;

exports[`renders with PatternFly Core styles 1`] = `
<section
  className="pf-c-notification-drawer__group"
>
  <h1>
    <button
      aria-expanded={false}
      className="pf-c-notification-drawer__group-toggle"
      onClick={[Function]}
    >
      <div>
        Critical Alerts
      </div>
      <div
        className="pf-c-notification-drawer__group-toggle-count"
      >
        <Badge
          isRead={false}
        >
          2
        </Badge>
      </div>
      <span
        className="pf-c-notification-drawer__group-toggle-icon"
      >
        <AngleRightIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </span>
    </button>
  </h1>
</section>
`;
